Added another data component

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,10 @@ body {
   margin: 10px;
 }
 
+.present{
+  padding-left: 10px;
+}
+
 /* code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
